SERVER-37578 Assert that a zone is associated with a shard during shard collection