src/mongo/db/s/config/initial_split_policy_test.cpp
@@ -430,5 +430,19 @@ TEST_F(GenerateShardCollectionInitialZonedChunksTest, EmptyTagsShouldFail) {
         ErrorCodes::InvalidOptions);
 }
 
+TEST_F(GenerateShardCollectionInitialZonedChunksTest, ZoneNotAssociatedWithAnyShardShouldFail) {
+    const std::vector<TagsType> tags = {
+        makeTag(ChunkRange(keyPattern().globalMin(), BSON(shardKey() << 0)), zoneName("0")),
+        makeTag(ChunkRange(BSON(shardKey() << 0), keyPattern().globalMax()), zoneName("1"))};
+    StringMap<std::vector<ShardId>> tagToShards = {{zoneName("0"), {shardId("Shard0")}},
+                                                   {zoneName("1"), {}}};
+
+    ASSERT_THROWS_CODE(
+        InitialSplitPolicy::generateShardCollectionInitialZonedChunks(
+            nss(), shardKeyPattern(), timeStamp(), tags, tagToShards, makeShardIds(1)),
+        AssertionException,
+        50973);
+}
+
 }  // namespace
 }  // namespace mongo
